Swapped the implementation for the resource allocation graph drawing from JGraph to JUNG, implemented deadlock detection